Fixed bug where text for hero background image was not position correctly over image when viewing on smaller viewports.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,8 +92,8 @@ footer {
 .background {
     background:url("../images/homepagebg.jpg");
     background-repeat:no-repeat;
-    background-size:contain;
-    background-position:center;
+    background-size: cover;
+    
     height: 853px;
     width: 100%;
 
@@ -103,6 +103,7 @@ footer {
     position: absolute;
     top: 0;
     left: 0;
+    margin-right: 0;
     width: 100%;
     height: 853px;
     opacity: 0.2;
@@ -110,23 +111,23 @@ footer {
 /**********Hero background text*********/
 h1 {
     Font-family: 'Playfair Display', sans-serif;
-    Font-size:100px;
+    Font-size:7vw;
     text-shadow: 1px 1px #000;    
 }
 
 h2 {
     Font-family: 'Playfair Display', sans-serif;
-    Font-size: 60px;
+    Font-size: 4vw;
     text-shadow: 1px 1px #000;
 }
 
 h3 {
-    Font-size: 30px;
+    Font-size: 2vw;
     text-shadow: 1px 1px #000;
 }
 
 .list-home {
-    Font-size: 25px;
+    Font-size: 1.5vw;
         text-shadow: 1px 1px #000;
 
 }
